examples/test/testpolicy9020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9020
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key28: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value33
          key12: value15
          key35: value40
      podSelector:
        matchLabels:
          key33: value20
          key39: value35
          key36: value18
